--- a/templates/about.html
+++ b/templates/about.html
@@ -19,16 +19,7 @@
           <li>Information Technology Products and Solutions</li>
           </ul>
            
-          <div class="row"> 
-          <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
-          <img class="img-responsive" src="../images/about1.jpg" />
-          </div> 
-          <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="../images/about2.jpg" />
-          </div> 
-          <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="../images/about3.jpg" />
-          </div> 
-           
-          </div>
+          
            
        
         
@@ -36,7 +27,7 @@
       <div class="same col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <h1>Selection Process</h1>
           <p>A panel of eminent technocrats will process the applicants, interview the promoters and select the ventures for incubation after carefully evaluating the business idea, market availability, potential value of the technology, growth prospects, innovative content and promoter team. The panel will consist of experienced and qualified professionals from specific industry, leading bankers, seasoned venture capitalists and academicians of repute.</p>
-          <img src="../images/timeline.png" class="timeline">
+          <img src="../images/timelinenew.png" class="timeline">
       </div>
       <div class="row container same col-lg-12 col-md-12 col-sm-12 col-xs-12">
       
