--- a/templates/events.html
+++ b/templates/events.html
@@ -1,7 +1,97 @@
 <div class="container main common">
-<h3>VIT-TBI invites applications from potential technology start-ups to avail the services of VIT-Technology Business incubator.</h3>
 
-<p>The process of Selection is detailed under Selection Process.
-Application may have the following details:
-Name of the Applicant, his address, Telephone, email id and complete educational background and experience details of all the promoters team. A brief idea about the technology and business, type of research or development assistance needed, availability of start-up capital, services expected from VIT-TBI and declaration that the details shared are not any trade or commercial secret. The format of the application can also be <a href="http://vittbi.com/testing/ApplicationTBI.doc">downloaded</a> from our website. </p>
+<h3>Unplugged is a popular startup conference and brings together amazing entrepreneurs, investors and geeks. VITTBI participates in their conferences and promotes the services of TBI. 
+</h3>
+
+
+<p>VITTBI took part in the following :</p>
+<ul>
+<li>Unpluggd an event organized by Pluggdin focusing on Technology Startups in Bangalore on 7th July, 2012.</li>
+<li>Unplugged event on 20th June 2015 in Bangalore</li>
+<li>Unplugged Event on 8th June, 2013, Bangalore.</li>
+</ul>
+<div class="container"> 
+  	<div class="row"> 
+  	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
+  	<img class="img-responsive" src="../images/unplugged.jpg" />
+  	</div> 
+  	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="../images/unplugged2.jpg" />
+  	</div> 
+  	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="../images/unplugged3.jpg" />
+  	</div> 
+  	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="../images/unplugged4.jpg" />
+  	</div> 
+  	
+  	</div>
+  	 </div>
+
+<h3>The Indus Entrepreneurs(TiE) has a singular focus on wealth creation through entrepreneurship by inspiring and educating budding entrepreneurs among several other activities. TiE holds regular workshops and networking meetings and VITTBI makes the best use of this opportunity to promote incubation at VITTBI.</h3>
+
+<p>VITTBI puts in continuous efforts to reach out to innovators and entrepreneurs. VITTBI organized a joint event on Incubation with TiE Chennai and TiE Bangalore</p>
+<ul>
+<li>TiE Chennai on 28th October 2009</li>
+<li>TiECON 2009 organized by TiE Chennai on 27th November at Chennai Trade Center.</li>
+<li>TiE Chennai on 8th September, 2010.</li>
+<li>TiECON '2011 organized by TiE Chennai on 24th November, 2011</li>
+<li>TiE Entrepreneurial Summit from 15th & 16th December, 2011 at Bangalore</li>
+<li>TiE Chennai Super Saturday organized by TiE Chennai on 14th July, 2012 at Chennai</li>
+<li>TiECON '2012 organized by TiE Chennai on 3rd December, 2012</li>
+<li>TiECON '2013 organized by TiE Chennai on 12th November, 2013</li>
+<li>TiECON '2014 organized by TiE Chennai on the 31st Oct & 1st Nov 2014</li>
+</ul>
+<div class="container"> 
+  	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
+  	<img class="img-responsive" src="../images/tie1.jpg" />
+  	</div> 
+  	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="../images/tie2.jpg" />
+  	</div> 
+  	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="../images/tie3.jpg" />
+  	</div> 
+  	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="../images/tie4.jpg" />
+  	</div> 
+  	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="../images/tie5.jpg" />
+  	</div> 
+  	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="../images/tie6.jpg" />
+  	</div> 
+  	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="../images/tie7.jpg" />
+  	</div> 
+  	 </div>
+<h3>VITTBI took part in the exhibitions organized by Silicon India Startup city in Chennai and Bangalore</h3>
+<ul>
+<li>Chennai on 20th March 2010</li>
+<li>Bangalore on 28th May, 2011</li>
+<li>25th February, 2012</li>
+<li>Siliconindia Startupcity, 2nd June 2012</li>
+<li>Silicon India in Bangalore on 22nd June, 2013</li>
+</ul>
+<div class="container"> 
+  	<div class="row"> 
+  	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
+  	<img class="img-responsive" src="../images/silicon1.jpg" />
+  	</div> 
+  	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="../images/silicon2.jpg" />
+  	</div> 
+  	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="../images/silicon3.jpg" />
+  	</div> 
+  	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="../images/silicon4.jpg" />
+  	</div> 
+  	</div>
+  	 </div>
+   <h3>First move by VITTBI and Kramski Stamping and Molding India Private Ltd., towards an Electronic cluster in Vellore District</h3>
+<p>
+Several units in Vellore district are engaged in the manufacture of electronic components and products, and mechanical components used in electronic products, but there is no coordination among them for the purpose of availing incentives given by the Central and State governments for expanding their business activities. 
+
+Under these circumstances, Kramski Stamping and Molding India Private Ltd., and the Vellore Institute of Technology-Technology Business Incubator (VITTBI) organised an Electronic Cluster Initiative at the Kramski factory premises in Erayankadu village 
+
+For more details: <a href="http://www.thehindu.com/todays-paper/tp-national/tp-tamilnadu/first-move-towards-electronic-cluster-in-vellore-district/article4816691.ece">visit here.</a></p>
+
+<h3>Signing and exchange of agreement with Technology Development Board on 16th September 2005</h3>
+<div class="container"> 
+  	 
+  	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
+  	<img class="img-responsive" src="../images/agreement.jpg" />
+  	</div> 
+  	
+  	 </div>
+
 </div>
