--- a/templates/footer.html
+++ b/templates/footer.html
@@ -12,6 +12,7 @@
 <ul>
 	<li><a href="#/ourstartups">Startups</a></li>
   	<li><a href="#/projects">Projects</a></li>
+    <li><a href="#/events">Events</a></li>
   	<li><a href="#training">Training</a></li>
   	<li><a href="#/apply">Apply</a></li>
   	</ul>
