--- a/templates/home.html
+++ b/templates/home.html
@@ -46,7 +46,7 @@
       <div class="slide-3"></div>
       <div class="hero">        
         <hgroup>
-            <h1 style="color:#e6882c">Apply Now!</h1>     
+            </hgroup>   
       </div>
     </div>
   </div> 
@@ -67,26 +67,35 @@ technology venture.</p>
     <div class="description row ">
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
           <div class="grey-box">
-            <h2>Startups Under Incubation</h2>
-            <p >Lorem ipsum dolor sit amet, consectetur adscing elit. Mauris ac mauris auctor lorem si.</p>
+            <h2>Our Startups</h2>
+            <p><ul>
+            <li><a href="#/ourstartups">Startups Under Incubation</a></li>
+            <li><a href="#/ourstartups">Graduated Startups</a></li>
+            <li><a href="#/ourstartups">Anchor Companies</a></li>
+            </ul>/</p>
             <img src="../images/rocket.png" class="back">
             <a class="learnmore" href="#/ourstartups">Learn More</a>
           </div>
           </div>
            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
            <div class="grey-box">
-            <h2> Graduated Startups</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adscing elit. Mauris ac mauris auctor lorem si.</p>
+            <h2>Core Facilities</h2>
+            <p><ul>
+            <li><a href="#/infrastructure">Infrastructure</a></li>
+            <li><a href="#/training">Training</a></li>
+            <li><a href="#/mentoring">Mentoring</a></li>
+            </ul></p>
             <img src="../images/persona.png" class="back">
-            <a class="learnmore" href="#/ourstartups">Learn More</a>
+            <a class="learnmore" href="#/infrastructure">Learn More</a>
             </div>
           </div>
            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
            <div class="orange-box">
-            <h2>Something Else</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adscing elit. Mauris ac mauris auctor lorem si.</p>
-            <img src="../images/folks.png" class="back">
-            <a class="learnmore" href="#/ourstartups">Learn More</a>
+            <h2>Application & Selection Process</h2>
+            <p><ul><li><a href="#/about">Selection</a></li>
+            <li><a href="#/apply">Apply Now</a></li></ul></p>
+            <img src="../images/folks.png" class="back"/>
+            <a class="learnmore" href="#/about">Learn More</a>
             </div>
           </div>
             
@@ -98,7 +107,7 @@ technology venture.</p>
     <div id="wrap" class="links">
       <li class="menu col-lg-6 col-md-6 col-sm-6 col-xs-6" ng-class="{ 'btn-active' : tbictrl.isSelected(1) }" ng-click="tbictrl.selectTab(1)"><a class="linkicons"href="#"data-id="upc">Recent Events</a>
       <span><img class="icon"src="images/upc.png"></span></li>
-      <li class="menu col-lg-6 col-md-6 col-sm-6 col-xs-6" ng-class="{ 'btn-active' : tbictrl.isSelected(2) }" ng-click="tbictrl.selectTab(2)"><a class="linkicons"href="#"data-id="news">Buzz Feed </a>
+      <li class="menu col-lg-6 col-md-6 col-sm-6 col-xs-6" ng-class="{ 'btn-active' : tbictrl.isSelected(2) }" ng-click="tbictrl.selectTab(2)"><a class="linkicons"href="#"data-id="news">Training</a>
       <span><img class="icon"src="images/events.png"></span> </li>
     </div>
     </div>
@@ -126,7 +135,8 @@ technology venture.</p>
                 <li>Unplugged Event on 8th June, 2013, Bangalore.</li>
                 </ul>
                 </p>
-              <img href="#events" class="km" src="images/km.png">
+                <a href="#/events"><img  class="km" src="images/km.png"/></a>
+              
           </div>
         </div>
        </div>
@@ -136,7 +146,7 @@ technology venture.</p>
           <div class="col-lg-8 col-md-8 col-sm-6  col-xs-6 text">
               <h1>TiE Chennai</h1>
               <p class="pdescription">The Indus Entrepreneurs(TiE) has a singular focus on wealth creation through entrepreneurship by inspiring and educating budding entrepreneurs among several other activities. TiE holds regular workshops and networking meetings and VITTBI makes the best use of this opportunity to promote incubation at VITTBI. </p>
-              <img href="#" class="km" src="images/km.png">
+              <a href="#/events"><img  class="km" src="images/km.png"/></a>
           </div>
           </div>
          
@@ -155,7 +165,7 @@ technology venture.</p>
                       <li>Siliconindia Startupcity, 2nd June 2012</li>
                       <li>Silicon India in Bangalore on 22nd June, 2013</li>
                       </ul></p>
-              <img href="#" class="km"src="images/km.png">
+              <a href="#/events"><img  class="km" src="images/km.png"/></a>
           </div>
           </div>
         </div>
@@ -168,7 +178,7 @@ technology venture.</p>
               <p class="pdescription">Several units in Vellore district are engaged in the manufacture of electronic components and products, and mechanical components used in electronic products, but there is no coordination among them for the purpose of availing incentives given by the Central and State governments for expanding their business activities. 
 
                     Under these circumstances, Kramski Stamping and Molding India Private Ltd., and the Vellore Institute of Technology-Technology Business Incubator (VITTBI) organised an Electronic Cluster Initiative at the Kramski factory premises in Erayankadu village</p>
-              <img href="http://www.thehindu.com/todays-paper/tp-national/tp-tamilnadu/first-move-towards-electronic-cluster-in-vellore-district/article4816691.ece" class="km" src="images/km.png">
+              <a href="#/events"><img  class="km" src="images/km.png"/></a>
           </div>
           </div>
         </div>
@@ -199,21 +209,21 @@ technology venture.</p>
       <div class="carousel-inner" role="listbox">
         <div class="item container active">
         <div class="row">
-          <img class="col-lg-4 col-md-4 col-sm-6 col-xs-6 sliderimage" src="../images/sliderimage1.jpg" alt="Chania">
+          <img class="col-lg-4 col-md-4 col-sm-6 col-xs-6 sliderimage" src="../images/eac2.jpg" alt="Chania">
           <div class="col-lg-8 col-md-8 col-sm-6 col-xs-6 text">
-              <h1>News & Buzz</h1>
-              <p class="pdescription">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-              <img href="#" class="km" src="images/km.png">
+              <h1>Entrepreneurship Awareness Camp</h1>
+              <p class="pdescription">The Entrepreneurship Awareness Camp is a 3-day non-residential programme covering the nuances of entrepreneurship. The sessions are designed in line with the guidelines provided by the supporting organizations. The sessions are interspersed with lectures, interactions, panel discussions and experiential learning workshops. About 75 degree and diploma students from different disciplines of Engineering, Science and Management participate in these camps. These camps are open to students within VIT University and other institutes in the region.</p>
+              <img href="#/training" class="km" src="images/km.png">
           </div>
         </div>
        </div>
         <div class="item container">
         <div class="row">
-          <img class="col-lg-4 col-md-4 col-sm-6  col-xs-6 sliderimage" src="../images/sliderimage1.jpg" alt="Chania">
+          <img class="col-lg-4 col-md-4 col-sm-6  col-xs-6 sliderimage" src="../images/fdp.jpg" alt="Chania">
           <div class="col-lg-8 col-md-8 col-sm-6  col-xs-6 text">
-              <h1>News & Buzz</h1>
-              <p class="pdescription">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-              <img href="#" class="km" src="images/km.png">
+              <h1>Faculty Development Programme on Entrepreneurship, Innovation & Incubation</h1>
+              <p class="pdescription">The programme is aimed at training about 25 aspiring science and technology graduates and the diploma holders in the essentials of conceiving, planning, initiating and launching an economic activity or an enterprise successfully. This is a 4 week non-residential programme that includes industry visits.</p>
+              <img href="#/training" class="km" src="images/km.png">
           </div>
           </div>
          
@@ -221,22 +231,22 @@ technology venture.</p>
 
         <div class="item container">
         <div class="row">
-          <img class="col-lg-4 col-md-4 col-sm-6  col-xs-6 sliderimage" src="../images/sliderimage1.jpg" alt="Flower">
+          <img class="col-lg-4 col-md-4 col-sm-6  col-xs-6 sliderimage" src="../images/tedp1.jpg" alt="Flower">
           <div class="col-lg-8 col-md-8 col-sm-6 col-xs-6 text">
-              <h1>News & Buzz</h1>
-              <p class="pdescription">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-              <img href="#" class="km" src="images/km.png">
+              <h1>Technology Entrepreneurship Development Programme</h1>
+              <p class="pdescription">The Technology Entrepreneurship Training Program (TEDP) is essentially an Accelerated Business Coaching Programme on specific areas like Embedded Systems , Food Processing etc., The main objective of the programme is to expose the participants to the requisite skills, knowledge and competencies for equipping themselves to start their venture in the chosen area of interest. The qualifying startups from this program can get incubation support and access to seed funds (maximum of Rs.50 lakhs / venture) from VITTBI. The business and technical sessions are handled by experienced faculty, industry experts and entrepreneurs. The programme includes one or more industry visits in the chosen domain. About 25 participants are accommodated per programme. </p>
+              <img href="#/training" class="km" src="images/km.png">
           </div>
           </div>
         </div>
 
          <div class="item container">
         <div class="row">
-          <img class="col-lg-4 col-md-4 col-sm-6 col-xs-6 sliderimage" src="../images/sliderimage1.jpg" alt="Flower">
+          <img class="col-lg-4 col-md-4 col-sm-6 col-xs-6 sliderimage" src="../images/edp1.jpg" alt="Flower">
           <div class="col-lg-8 col-md-8 col-sm-6 col-xs-6 text">
-              <h1>News & Buzz</h1>
-              <p class="pdescription">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-              <img href="#" class="km" src="images/km.png">
+              <h1>Entrepreneurship Development Programme</h1>
+              <p class="pdescription">The most crucial change agents in the process of developing young entrepreneurs are teachers with adequate skills, knowledge and information in the area of Entrepreneurship. The Faculty Development Programme (FDP) in Entrepreneurship is designed to train professionals in Entrepreneurship development so that they can act as “Resource Persons” in guiding and motivating young students, particularly from science, engineering and technology streams to take up entrepreneurship as a career option. This is a 2-week residential programme that is open to faculty from all over India. About 25 faculties participate in this very engaging programme comprising of intensive lectures, group activities, case studies and experiential teaching –learning sessions apart from industry visits.</p>
+              <img href="#/training" class="km" src="images/km.png">
           </div>
           </div>
         </div>
