--- a/templates/infrastructure.html
+++ b/templates/infrastructure.html
@@ -44,7 +44,7 @@
 
               <p>Vellore Institute of Technology –Technology Business Incubator (VIT-TBI) is offering Product development support with its Rapid Prototyping Facility. In order to cater to the emerging requirements (multiple materials, bigger build sizes and material properties equivalent to that of injection moulded parts), VITTBI expanded the Rapid Prototyping facility with a FDM Titan model Stratasys make equipment.</p>
               </div>
-              <div class="row">
+              <div class="row  infraborder">
               <div class="col-lg-3 col-md-3 col-xs-12 col-sm-3">
                <img  class="imageabout1" src="../images/rapid1.jpg" />
                </div>
@@ -64,7 +64,7 @@
               </div>
               </div>
               </div>
-              <div class="row">
+              <div class="row infraborder">
               <div class="col-lg-3 col-md-3 col-xs-12 col-sm-3">
                <img class="imageabout1"  src="../images/rapid3.jpg" />
                </div>
@@ -86,7 +86,7 @@
               </div>
               </div>
               </div>
-              <div class="row">
+              <div class="row infraborder">
               <div class="col-lg-3 col-md-3 col-xs-12 col-sm-3">
                 <img class="imageabout1"  src="../images/rapid4.jpg" />
                 </div>
@@ -108,7 +108,7 @@
                      </div>
               </div>
               </div>
-              <div class="row">
+              <div class="row infraborder">
               <div class="col-lg-5 col-md-5 col-xs-12 col-sm-5">
               <h2>This system builds models including external features quickly, directly from CAD STL files.</h2>
 
@@ -231,8 +231,8 @@
          <h2>A Conference room with LCD projection facility / Discussion Hall / Photocopier / DTP / Scanner / Telephone – Fax / Secretarial Access.</h2>
          </div>
          <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-           <img class="imageabout1"  src="../images/conference.jpg" />
-           <img class="imageabout1"  src="../images/hall.jpg" />
+           <img class="imageabout1"  style="left:30%"  src="../images/conference.jpg" />
+           <img class="imageabout1" src="../images/hall.jpg" />
            </div>
          </div>
          </div>
