--- a/css/common.css
+++ b/css/common.css
@@ -5,7 +5,7 @@
 .common p{
 	font-size: 18px;
 	font-weight: 300;
-	color: white;
+	color: #212121;
 	font-family: Roboto;
 }
 .common h1{
@@ -17,7 +17,7 @@
 .common h2{
 	font-size: 24px;
 	font-weight: 600;
-	color: white;
+	color: #212121;
 	font-family: Roboto;
 }
 .common h3{
@@ -29,7 +29,7 @@
 .common ul li {
     font-size: 18px;
 	font-weight: 400;
-	color: white;
+	color: #212121;
 	text-decoration: none;
 	font-family: Roboto;
 }
@@ -45,14 +45,21 @@
 .common a{
 	    font-size: 18px;
 	font-weight: 300;
-	color: white;
+	color: #212121;
 	text-decoration: underline;
 	font-family: Roboto;
 
 }
 @media screen and (max-width: 768px){
 	.common p{
-		font-size: 0.4em;
+		font-size: 0.5em;
+	}
+	.common ul li {
+	    font-size: 0.5em;
+		font-weight: 400;
+		color: #212121;
+		text-decoration: none;
+		font-family: Roboto;
 	}
 	.common h1{
 		font-size: 0.6em;
@@ -63,12 +70,10 @@
 		font-weight: 400;
 	}
 	.common ul li a:link{
-	    font-size: 0.8em;
+	    font-size: 0.7em;
 		font-weight: 400;
 	}
-	.common ul li a:link{
-    font-size: 0.8em;
-}
+	
 
 }
 /* @media screen and (min-width: 768px) and (max-width: 1268px){
@@ -87,7 +92,7 @@
 	.common p{
 	font-size: 0.6em;
 	font-weight: 300;
-	color: white;
+	color: #212121;
 	font-family: Roboto;
 }   .common ul li {
     font-size: 0.7em;
@@ -95,8 +100,7 @@
 
 } */
 /* Makes images fully responsive */
-.img-responsive{ filter: gray; /* IE6-9 */ -webkit-filter: grayscale(1); 
-/* Google Chrome, Safari 6+ & Opera 15+ */
+.img-responsive{ 
  -webkit-box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.75); 
  -moz-box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.75); 
 box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.75);
