--- a/css/infrastructure.css
+++ b/css/infrastructure.css
@@ -1,9 +1,8 @@
 .panel1{
 	background-color: white;
 	padding: 18px;
-	min-height: 140px;
+	min-height: 120px;
 	margin-top: 120px;
-	margin-bottom: 40px;
 	text-align: center;
 }
 .borderright{
@@ -49,6 +48,8 @@ table{
 	font-family: Roboto;
 }
 .imageabout1{
+	background-position: cover;
+	background-repeat: no-repeat;
 	width: 100%;
 	max-width: 200px;
 	margin:auto;
