--- a/css/main.css
+++ b/css/main.css
@@ -12,20 +12,20 @@
 
 }
 .description{
-	background-color: #212121;
+	background-color: #fafafa;
 	padding: 10px;
 }
 .about{
-	background-color: #212121;
+	background-color: #fafafa;
 
 }
 .about h1{
 	font-family: Roboto;
-	color: white;
+	color:#212121;
 }
 .about p{
 	font-family: Roboto;
-	color: white;
+	color:#212121;
 }
 #slidernavbar{
 display: none;
@@ -80,7 +80,12 @@ display: none;
 .material:hover{
 	background-color: black;
 }
+*::-webkit-scrollbar {
+    width: 10px!important;
+    background: #FAFAFA;
+}
 .linkdrop{
+	line-height: 1.1;
 	width: 14%;
 	font-size: 26px;
 	font-family: Roboto;
@@ -90,6 +95,7 @@ display: none;
     margin-top: 28px;
 }
 .linkdrop a{
+
 	margin-top: 12px;
 	font-size: 20px;
 	font-family: Roboto;
@@ -236,17 +242,24 @@ inner>.item>img {
 	font-weight:500;
 	font-size:28px;
 }
-.grey-box p{
+.grey-box ul li a{
+	text-decoration: none;
 	color:white; 
 	font-family:Roboto;
 	font-weight:300;
 	font-size:18px;
 }
-.orange-box p{
+.grey-box ul li a:hover{
+	text-decoration: underline !important;
+}
+.orange-box ul li a{
 	color:white; 
 	font-family:Roboto;
 	font-weight:300;
 	font-size:18px;
+}
+.orange-box ul li a:hover{
+	text-decoration: underline !important;
 }
 .orange-box{
 	background-color: #e48e15;
@@ -800,10 +813,10 @@ Image credits: unsplash.com
 /********************************/
 .fade-carousel {
     position: relative;
-    height: 65vh;
+    height: 55vh;
 }
 .fade-carousel .carousel-inner .item {
-    height: 65vh;
+    height: 55vh;
 }
 .fade-carousel .carousel-indicators > li {
     margin: 0 2px;
@@ -896,13 +909,13 @@ Image credits: unsplash.com
   background-repeat: no-repeat;
 }
 .fade-carousel .slides .slide-1 {
-  background-image: url(https://ununsplash.imgix.net/photo-1416339134316-0e91dc9ded92?q=75&fm=jpg&s=883a422e10fc4149893984019f63c818); 
+  background-image: url(../images/network.jpg); 
 }
 .fade-carousel .slides .slide-2 {
-  background-image: url(https://ununsplash.imgix.net/photo-1416339684178-3a239570f315?q=75&fm=jpg&s=c39d9a3bf66d6566b9608a9f1f3765af);
+  background-image: url(../images/network.jpg);
 }
 .fade-carousel .slides .slide-3 {
-  background-image: url(https://ununsplash.imgix.net/photo-1416339276121-ba1dfa199912?q=75&fm=jpg&s=9bf9f2ef5be5cb5eee5255e7765cb327);
+  background-image: url(../images/network.jpg);
 }
 
 /********************************/
