--- a/css/startups.css
+++ b/css/startups.css
@@ -1,103 +1,106 @@
 
-fa-ellipsis-h:before {
-  content: "\f141";
-}
-.fa-ellipsis-v:before {
-  content: "\f142";
-}
-.card .card-image{
-    overflow: hidden;
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    -ms-transform-style: preserve-3d;
-    -o-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-}
 
-.card .card-image img{
-    -webkit-transition: all 0.4s ease;
-    -moz-transition: all 0.4s ease;
-    -ms-transition: all 0.4s ease;
-    -o-transition: all 0.4s ease;
-    transition: all 0.4s ease;
-}
-.card{
-    font-family: 'Roboto', sans-serif; 
-    margin-top: 10px;
-    position: relative;
-    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  box-shadow: 4 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-}
-
-.card .card-content {
-    background-color: white;
-    padding: 10px;    
-}
-
-.card .card-content .card-title, .card-reveal .card-title{
-    font-size: 24px;
-    font-weight: 200;    
-}
-
-.card .card-action{
-    background-color: white;
-    padding: 20px;
-    border-top: 1px solid rgba(160, 160, 160, 0.2);
-}
-.card .card-action a{
-    font-size: 15px;
-    color: #ffab40;
-    text-transform:uppercase;
-    margin-right: 20px;    
-    -webkit-transition: color 0.3s ease;
-    -moz-transition: color 0.3s ease;
-    -o-transition: color 0.3s ease;
-    -ms-transition: color 0.3s ease;
-    transition: color 0.3s ease;
-}
-.card .card-action a:hover{    
-    color:#ffd8a6;
-    text-decoration:none;
-}
-
-.card .card-reveal{    
-    padding: 20px;
-    position: absolute;
-    background-color: #FFF;
-    width: 100%;
-    overflow-y: auto;
-    /*top: 0;*/
-    left:0;
-    bottom:0;
-    height: 100%;
-    z-index: 1;
-    display: none;    
-}
-
-.card .card-reveal p{
-    color: rgba(0, 0, 0, 0.71);
-    margin:20px ;
-}
 .btn-active2{
     color: #e6882c;
 }
-.btn-custom{
-    background-color: transparent;
-    font-size:18px;
-        border: 0px outset buttonface !important;
+* {
+        box-sizing: border-box;
+        -webkit-tap-highlight-color: transparent;
+        text-rendering: optimizeLegibility;
 }
-.dots{
-    width:5px;
-    height:23px;
+
+*::-moz-selection {
+        color: #CFD8DC;
+        background: #009688;
 }
+
+*::selection {
+        color: #CFD8DC;
+        background: #009688;
+}
+
+*::-webkit-scrollbar {
+        width: 10px!important;
+        background: #FAFAFA;
+}
+
+*::-webkit-scrollbar-track {
+        background: rgba(255, 255, 255, .08);
+}
+
+*::-webkit-scrollbar-thumb {
+        background-color: rgba(0, 0, 0, .2);
+}
+/* End defaults*/
+.card {
+    display: inline-block;
+    min-height: 460px;
+    vertical-align: top;
+    width: 350px;
+    position: relative;
+    overflow: hidden;
+    margin: 10px;
+    background: #FFF;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    color: #272727;
+    border-radius: 2px;
+  }
+  .card .title {
+    line-height: 22px;
+    font-size: 20px;
+    font-weight: 300;
+  }
+  .card .content {
+    padding: 20px;
+    font-weight: 300;
+    border-radius: 0 0 2px 2px;
+  }
+  .card p {
+    font-size: 17px;
+    margin: 0;
+  }
+  .card .action {
+    border-top: 1px solid rgba(160, 160, 160, 0.2);
+    padding: 20px;
+  }
+  .card a {
+    color: #ffab40;
+    margin-right: 20px;
+    -webkit-transition: color 0.3s ease;
+    transition: color 0.3s ease;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+  .card .image {
+    position: relative;
+  }
+  .card .image img {
+    border-radius: 2px 2px 0 0;
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+  }
+  .card .image .title {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 20px;
+    color: #FFF;
+  }
+
 .puiheads{
     min-height: 80px !important;
     background-color: white;
     padding: 5px;
-    cursor: pointer;
     text-align: center;
 }
+.puihead a:hover{
+    color: #e6882c !important;
+}
+
 .puihead a:visited{
     color: black !important;
 }
@@ -106,17 +109,18 @@ fa-ellipsis-h:before {
 }
 .puiheads a:link{
     padding: 4px;
-    margin-top: 7px;
-    font-weight: 400;
-    font-size: 24px;
+    margin-top: 17px;
+    font-weight: 500;
+    text-transform: capitalize;
+    font-size: 30px;
     font-family: Roboto;
     color: black !important;
 }
 @media screen and (max-width: 768px){
-    .puiheads h1{
+    .puiheads a:link{
     padding: 2px;
     font-weight: 400;
-    font-size: 1.2em;
+    font-size: 1.1em;
     
 }
 .card .card-content .card-title, .card-reveal .card-title{
@@ -126,10 +130,9 @@ fa-ellipsis-h:before {
 .main{
     margin-top: 100px;
 }
-.dots{
-    width: 2px;
-    height: 18px;
-
+.card{
+    margin: auto;
+    width: 100%;
 }
 
 }
